# koala-diff

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: CI.yml
python/koala_diff/: __init__.py  core.py  reporter.py
src/: lib.rs
