[package]
name = "koala_diff"
version = "0.2.3"
edition = "2021"
description = "Blazingly fast data comparison tool for Python."

[lib]
name = "koala_diff"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28.0", features = ["extension-module"] }
polars = { version = "0.53", features = ["lazy", "parquet", "csv", "json", "dtype-struct", "dtype-decimal", "dtype-datetime", "dtype-date", "dtype-duration", "dtype-time", "dtype-array", "dtype-categorical"] }
thiserror = "1.0"
indicatif = "0.17" # Progress bar
ahash = "0.8"      # Fast hashing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
lto = true
codegen-units = 1
strip = true
