[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "koala-diff"
version = "0.1.0"
description = "High-performance data diff tool in Rust."
readme = "README.md"
authors = [
    { name = "Glenn Dalida", email = "dalidaglenno6452@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "polars>=0.20.0",
    "jinja2>=3.0.0",
    "pyarrow>=14.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "maturin",
    "ruff"
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "koala_diff._internal"
