[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "koala-diff"
version = "0.2.1"
description = "High-performance data diff tool in Rust."
readme = "README.md"
authors = [
    { name = "Glenn Dalida", email = "dalidaglenno6452@gmail.com" }
]
license = "MIT"
requires-python = ">=3.10"
keywords = ["data-diff", "rust", "polars", "data-quality", "regression-testing", "parquet", "csv"]
dependencies = [
    "polars>=0.20.0",
    "jinja2>=3.0.0",
    "pyarrow>=14.0.0"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Archiving :: Mirroring", 
    "Topic :: Utilities"
]

[project.urls]
Homepage = "https://github.com/godalida/koala-diff"
Repository = "https://github.com/godalida/koala-diff"
Documentation = "https://github.com/godalida/koala-diff#readme"
Issues = "https://github.com/godalida/koala-diff/issues"

[project.optional-dependencies]
dev = [
    "pytest",
    "maturin",
    "ruff"
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "koala_diff._internal"
